--- a/waybar/style.css
+++ b/waybar/style.css
@@ -31,6 +31,7 @@ window#waybar{
 #workspaces button {
     padding: 0 5px;
     color: #cdd6f4;
+    border-radius: 10px;
 }
 #custom-launcher {
     font-size: larger;
@@ -42,9 +43,13 @@ window#waybar{
     padding: 0px 8px; 
 }
 #workspaces button:hover {
-    background-color: #a6e3a1;
-    background: none;
+    color: #89b4fa;
     border: none;
+    box-shadow: none; 
+    text-shadow: none;
+    background: none; 
+    transition: none; 
+    border-radius: 10px;
 }
 
 #workspaces button.active {
